<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">vlas_s_application5</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg">Добавить расходник</string>
  <string name="lbl_1063_3">1063 см3</string>
  <string name="lbl_0">0</string>
  <string name="lbl_62">6 месяцев</string>
  <string name="lbl_1">1</string>
  <string name="lbl_22">2</string>
  <string name="lbl4">Имя расходника</string>
  <string name="lbl5">Сохранить</string>
  <string name="lbl2">Текущий пробег </string>
  <string name="lbl3">Колодки</string>
  <string name="lbl_xv1100_1986">XV1100, 1986</string>
  <string name="lbl_9">9</string>
  <string name="lbl_21_500">21 500 км</string>
  <string name="lbl_yamaha_virago">Yamaha Virago</string>
  <string name="lbl_300">300 км</string>
  <string name="lbl_500">За 500 км</string>
  <string name="msg4">Дополнительная информация</string>
  <string name="msg3">Продолжительность использования</string>
  <string name="msg2">Описание расходника</string>
  <string name="msg8">Установить автопробег</string>
  <string name="lbl_53">53%</string>
  <string name="msg7">Уведомлять об обновлении \u2028пробега</string>
  <string name="msg6">Уведомлять о замене \u2028расходника</string>
  <string name="msg5">Изменить мотоцикл</string>
  <string name="msg_12304">Осталось 12304 км</string>
  <string name="lbl_32">3</string>
  <string name="lbl_33">3 месяца</string>
  <string name="lbl8">Мой Бэмбакс</string>
  <string name="lbl9">см</string>
  <string name="lbl6">Обновить пробег</string>
  <string name="lbl7">_</string>
  <string name="lbl10">Пробег</string>
  <string name="lbl11">Месяц</string>
  <string name="lbl">Расходники</string>
  <string name="lbl12">Год</string>
  <string name="lbl_35_304">35 304 км</string>
  <string name="lbl13">Всё время</string>
  <string name="lbl14">Настройки</string>
  <string name="lbl15">Выбрать тему</string>
  <string name="lbl_1063">1063 </string>
  <string name="lbl16">Уведомления</string>
  <string name="lbl17">Ежемесячно</string>
  <string name="msg_oilmotors_10w4">OilMotors, 10W40</string>
  <string name="lbl18">Автопробег</string>
  <string name="lbl19">В период</string>
</resources>
