<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="androidLargeOneVM" type="com.vlassapplication.app.modules.androidlargeone.data.viewmodel.AndroidLargeOneVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearAndroidLarge"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_10pxv"
        android:layout_marginTop="@dimen/_20pxv"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnthree"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_10pxh"
            android:layout_weight="1.0"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:gravity="center_horizontal"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_11pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowthree"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtThree"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.69"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{androidLargeOneVM.androidLargeOneModel.txtThree}"
                        style="@style/txtMontserratbold30" tools:text="@string/lbl"/>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumn21500"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_2pxv"
                        android:layout_marginStart="@dimen/_32pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_weight="0.31"
                        android:layout_width="0dp" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txt21500"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{androidLargeOneVM.androidLargeOneModel.txt21500}"
                            style="@style/txtMontserratromanbold18" tools:text="@string/lbl_21_500"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtLanguage"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_1pxv"
                            android:layout_width="match_parent"
                            android:singleLine="true"
                            android:text="@{androidLargeOneVM.androidLargeOneModel.txtLanguage}"
                            style="@style/txtMontserratromanregular8" tools:text="@string/lbl2"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <androidx.recyclerview.widget.RecyclerView
                android:gravity="start"
                android:id="@+id/recyclerListone"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_52pxv"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                itemSpace="@{@dimen/_10pxh}" tools:itemCount="2" tools:listitem="@layout/row_listone"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_gray_800_radius_25"
                android:id="@+id/btnBtnAdd" android:layout_gravity="end"
                android:layout_height="@dimen/_50pxh"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_386pxv"
                android:layout_width="@dimen/_50pxh"
                android:paddingHorizontal="@dimen/_10pxh"
                android:paddingVertical="@dimen/_10pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_btnadd" tools:ignore="ContentDescription"/>
        </LinearLayout>
        <FrameLayout android:gravity="start"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content" android:layout_width="match_parent">
            <FrameLayout android:id="@+id/frameStackrectanglefive"
                android:layout_height="@dimen/_74pxv" android:layout_width="@dimen/_340pxh">
                <View
                    android:background="@drawable/rectangle_bg_gray_800_radius_37"
                    android:id="@+id/viewRectangleFive"
                    android:layout_height="@dimen/_74pxv" android:layout_width="@dimen/_340pxh"/>
                <LinearLayout android:id="@+id/linearRowopenendwrench"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <FrameLayout android:id="@+id/frameSuppliers"
                        android:layout_height="@dimen/_50pxv"
                        android:layout_width="@dimen/_50pxh" style="@style/groupStylegray_800cornerRadius">
                        <ImageView android:id="@+id/imageOpenEndWrench"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginHorizontal="@dimen/_10pxh"
                            android:layout_marginVertical="@dimen/_10pxv"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_openendwrench"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_openendwrench"/>
                    </FrameLayout>
                    <FrameLayout android:id="@+id/frameMyBambax"
                        android:layout_height="@dimen/_50pxv"
                        android:layout_width="@dimen/_50pxh" style="@style/groupStylegray_800cornerRadius">
                        <ImageView android:id="@+id/imageDirtBike"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginHorizontal="@dimen/_10pxh"
                            android:layout_marginVertical="@dimen/_10pxv"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_dirtbike"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_dirtbike"/>
                    </FrameLayout>
                    <FrameLayout android:id="@+id/frameMyBambax1"
                        android:layout_height="@dimen/_50pxv"
                        android:layout_width="@dimen/_50pxh" style="@style/groupStylegray_800cornerRadius">
                        <ImageView android:id="@+id/imageMore"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_30pxh"
                            android:layout_marginHorizontal="@dimen/_10pxh"
                            android:layout_marginVertical="@dimen/_10pxv"
                            android:layout_width="@dimen/_30pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_more"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_more"/>
                    </FrameLayout>
                </LinearLayout>
            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
